; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_46297.c_lookup.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_46297.c_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MACH_PORT_NULL = common dso_local global i64 0, align 8
@bootstrap_port = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [22 x i8] c"unable to look up %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"bad service port\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @lookup(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i64, i64* @MACH_PORT_NULL, align 8
  store i64 %6, i64* %4, align 8
  %7 = load i32, i32* @bootstrap_port, align 4
  %8 = load i8*, i8** %3, align 8
  %9 = call i64 @bootstrap_look_up(i32 %7, i8* %8, i64* %4)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @KERN_SUCCESS, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %1
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* %14)
  %16 = load i64, i64* @MACH_PORT_NULL, align 8
  store i64 %16, i64* %2, align 8
  br label %26

17:                                               ; preds = %1
  %18 = load i64, i64* %4, align 8
  %19 = load i64, i64* @MACH_PORT_NULL, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %17
  %22 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  %23 = load i64, i64* @MACH_PORT_NULL, align 8
  store i64 %23, i64* %2, align 8
  br label %26

24:                                               ; preds = %17
  %25 = load i64, i64* %4, align 8
  store i64 %25, i64* %2, align 8
  br label %26

26:                                               ; preds = %24, %21, %13
  %27 = load i64, i64* %2, align 8
  ret i64 %27
}

declare dso_local i64 @bootstrap_look_up(i32, i8*, i64*) #1

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
